[package]
name = "byte-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4.3"}
futures = "0.3.28"
gutenberg = { path = "../gutenberg" }
gutenberg-types = { path = "../gutenberg-types" }
package-manager = { path = "../package-manager" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.99"
serde_yaml = "0.9.22"
tempfile = "3.6.0"
walkdir = "2.3.3"
anyhow = "1.0"
dirs = "5.0"
