[package]
name = "byte-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "2d985a342263ae224966e871b24beeafe11d782a" }

dotenv = "0.15"
env_logger = "0.10.0"
actix-web = {version = "4.3"}
futures = "0.3.28"
gutenberg = { path = "../gutenberg" }
gutenberg-types = { path = "../gutenberg-types" }
package-manager = { path = "../package-manager" }
rust-sdk = { path = "../rust-sdk" }
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
serde_json = "1.0.99"
serde_yaml = "0.9.22"
tempfile = "3.6.0"
walkdir = "2.3.3"
anyhow = "1.0"
dirs = "5.0"
