[package]
name = "byte-cli"
version = "0.3.0"
edition = "2021"

[dependencies]
rust-sdk = { path = "../rust-sdk" }
uploader = { path = "../uploader" }
package-manager = { path = "../package-manager" }
gutenberg-types = { path = "../gutenberg-types" }

sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8" }
move-package = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8" }
reqwest = { version = "0.11", features = ["json"]}
git2 = "0.17"
dialoguer = "0.10"
thiserror = "1.0"
tokio = {version = "1.20", features = ["macros", "rt-multi-thread"]}
clap = {version = "4.1.6", features = ["derive"]}
anyhow = "1.0"
console = "0.15"
hex = "0.4"
dotenv = "0.15"
glob = "0.3"
toml = "0.5"
walkdir = "2.3.2"
url = "2.4"
convert_case = "0.6.0"
tempfile = "3.2"
dirs = "5.0"
chrono = "0.4"
terminal-link = "0.1"
indicatif = "0.16"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Amazon
aws-config = "0.53"
aws-sdk-s3 = "0.23"
