[package]
name = "byte_cli"
version = "0.2.0"
edition = "2021"

[dependencies]
gutenberg = { path = "../gutenberg" }
dialoguer = "0.10"
thiserror = "1.0"
tokio = {version = "1.24", features = ["macros", "rt-multi-thread"]}
clap = {version = "4.0", features = ["derive"]}
anyhow = "1.0"
console = "0.15.4"
hex = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.10"

[dev-dependencies]
pretty_assertions = "1.3.0"
