[package]
name = "byte_cli"
version = "0.2.0"
edition = "2021"

[dependencies]
gutenberg = { path = "../gutenberg" }
rust-sdk = { path = "../rust-sdk" }

dialoguer = "0.10"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = {version = "1.20", features = ["macros", "rt-multi-thread"]}
clap = {version = "4.0", features = ["derive"]}
anyhow = "1.0"
console = "0.15"
hex = "0.4"
mime_guess = "2.0"
dotenv = "0.15"
glob = "0.3"
toml = "0.5.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Amazon
aws-config = "0.53"
aws-sdk-s3 = "0.23"

[dev-dependencies]
pretty_assertions = "1.3.0"
