[package]
name = "gutenberg-types"
version = "0.2.0"
edition = "2021"

[dependencies]
url = "2.4"
deunicode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

# CLI dependencies
clap = { version = "4.2", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
pretty_assertions = "1.3"
regex = "1.8.1"
