[package]
name = "gutenberg"
version = "0.2.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
url = "2.4"
hex = "0.4"
deunicode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# CLI dependencies
clap = { version = "4.2", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }

[features]
# Include full generation functionality
full = []
# Compile with CLI support
cli = ["clap", "serde_json", "serde_yaml"]
default = ["full"]

[[bin]]
name = "gutenberg"
required-features = ["cli"]

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
pretty_assertions = "1.3"
regex = "1.8.1"
