[package]
name = "gutenberg"
version = "0.2.0"
edition = "2021"

[dependencies]
package-manager = { path = "../package-manager" }
gutenberg-types = { path = "../gutenberg-types" }

url = "2.4"
deunicode = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

# CLI dependencies
clap = { version = "4.2", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
anyhow = "1.0"

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
pretty_assertions = "1.3"
regex = "1.8.1"
