[package]
name = "package-manager"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
convert_case = "0.6"
console = "0.15"
regex = "1.8"
toml = "0.5"

gutenberg-types = { path = "../gutenberg-types" }

[dev-dependencies]
serde_json = "1.0"
