[package]
name = "package-manager"
version = "0.3.0"
edition = "2021"

[dependencies]
gutenberg-types = { path = "../gutenberg-types" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
thiserror = "1.0"
anyhow = "1.0"
convert_case = "0.6"
console = "0.15"
regex = "1.8"
toml = "0.5"
git2 = "0.17"
tempfile = "3.2"

[dev-dependencies]
serde_json = "1.0"
