[package]
name = "rust-sdk"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sui-sdk = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8" }
sui-keys = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8" }
sui-types = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8" }
sui-move-build = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8" }
sui-config = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8" }
sui-source-validation = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8" }
move-core-types = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8" }
move-package = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8" }
sui-move = { git = "https://github.com/MystenLabs/sui", rev = "cc4ad6d8a3f05ad8641e977fad228e09a77453b8", features = ["build"] }

bcs = "0.1"
thiserror = "1.0"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
console = "0.15"
dirs = "4.0"
signature = "1.6"
dashmap = "5.0"
url = {version = "2.4", features = ["serde"]}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
