[package]
name = "uploader"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
async-trait = "0.1"
url = "2.3"
reqwest = { version = "0.11", features = ["json", "multipart"] }
ini = "1.3"
dirs = "4.0"
indexmap = "1.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Amazon
aws-config = "0.53"
rust-s3 = "0.31"

rust-sdk = { path = "../rust-sdk" }
