[package]
name = "uploader"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
libc = "0.2"
console = "0.15"
anyhow = "1.0"
async-trait = "0.1"
url = "2.4"
reqwest = { version = "0.11", features = ["json", "multipart"] }
ini = "1.3"
dirs = "4.0"
indexmap = "1.9"
dashmap = "5.0"
indicatif = "0.16"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Amazon
aws-config = "0.53"
rust-s3 = "0.31"

rust-sdk = { path = "../rust-sdk" }
